--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <li>
               <a class="sliding-u-l-r-l" href="studies/egd.html">digital bulletin board system</a>
             </li>
+            <li>
+              <a class="sliding-u-l-r-l" href="studies/type.html">typographic experiments</a>
+            </li>
           </ul>
         </li>
         <li>
@@ -66,10 +69,10 @@
     
     <div class="container">
     <div class="row">
-      <div class="five columns" style="margin-top: 13%">
+      <div class="five columns" style="margin-top: 8%">
           <h3>lauren holden is a writer & design strategist interested in how the visual & verbal interact to create meaning</h3>
     </div>
-         <div class="main six columns offset-by-one" style="margin-top: 13.5%;">
+         <div class="main six columns offset-by-one" style="margin-top: 8%;">
           <h4><u>case studies</u></h4> 
           <h5><a class="sliding-u-l-r-l" href="studies/poetry.html">studies in visual poetry —</a></h5>
           <p style="margin-top:-0.5%;">A series of graphic experiments looking at how sound, motion, interactivity and more can be used as rhetorical devices in visual poetry.</p>
@@ -77,6 +80,8 @@
           <p style="margin-top:-0.5%;">A publication looking at how art can be used as a contemporary tool for activism and community formation. </p>
           <h5><a class="sliding-u-l-r-l" href="studies/egd.html">digital bulletin board system  —</a></h5>
           <p style="margin-top:-0.5%;">A system designed to create visual hierarchy for promotional materials at the Queen Elizabeth Community & Cultural Centre in Oakville.</p>
+        <h5><a class="sliding-u-l-r-l" href="studies/type.html">typographic experiments  —</a></h5>
+          <p style="margin-top:-0.5%;">A few smaller explorations in expressive typography.</p>
       </div>
     </div>
         
