--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Lauren Holden</title>
   <meta name="description" content="">
   <meta name="author" content="">
-  <meta name="keywords" content="lauren holden, design, ">
+  <meta name="keywords" content="lauren holden, design, Toronto, Canada, graphic design, poetry, writing, design strategy, strategist, content strategy, typography, editorial, publication, art direction, creative direction, editing, visual communication, environmental design, experiential design">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
