--- a/studies/egd.html
+++ b/studies/egd.html
@@ -52,6 +52,9 @@
             <li>
               <a class="sliding-u-l-r-l" href="../studies/egd.html">digital bulletin board system</a>
             </li>
+            <li>
+              <a class="sliding-u-l-r-l" href="../studies/type.html">typographic experiments</a>
+            </li>
           </ul>
         </li>
         <li>
@@ -317,9 +320,10 @@ Information Centre.</h1>
         </div>
         <div class="four columns offset-by-four">
             <ul class="footer" style="margin-top: 5%; margin-left:-11%;">
-                <a id="italic" href="../poetry.html">Studies in Visual Poetry</a>
-                <br><a id="italic" href="../contra.html">Contra Magazine</a>
-                <br><a id="italic" href="../egd.html">Digital Bulletin Board System</a>
+                <a class="sliding-u-l-r-l" id="italic" href="../studies/poetry.html">Studies in Visual Poetry</a>
+                <br><a class="sliding-u-l-r-l" id="italic" href="../studies/contra.html">Contra Magazine</a>
+                <br><a class="sliding-u-l-r-l" id="italic" href="../studies/egd.html">Digital Bulletin Board System</a>
+                <br><a class="sliding-u-l-r-l" id="italic" href="../studies/type.html">Typographic Experiments</a>
             </ul>
         </div>
 </div>
