--- a/studies/poetry.html
+++ b/studies/poetry.html
@@ -55,6 +55,9 @@
             <li>
               <a class="sliding-u-l-r-l" href="../studies/egd.html">digital bulletin board system</a>
             </li>
+            <li>
+              <a class="sliding-u-l-r-l" href="../studies/type.html">typographic experiments</a>
+            </li>
           </ul>
         </li>
         <li>
@@ -75,7 +78,7 @@
     
     <div class="row">
       <div class="seven columns offset-by-five">
-          <p style="margin-top: 10%;">My interest in writing and design has always been driven by a need to understand the intricate relationships between text and image. This has recently manifested itself as an ongoing, in-depth study of visual poetry.  Described as “the creation of verbal artefacts which exploit the possibilities, not only of sound, sense and rhythm—the traditional fields of poetry— but also of space,”<sup>1</sup> visual poetry is unique in that textual and visual rhetoric interact to create meaning. Ever since I learned of Guillaume Apollinaire’s iconic <span id="italic">il Pleut</span> —  a poem in which the stanzas are arranged in the form of falling rain, echoing the piece's subject– I have been infatuated with the subject. After all, it is the perfect combination of my two favourite activities: writing and graphic design.</p>     
+          <p style="margin-top: 10%;">My interest in writing and design has always been driven by a need to understand the intricate relationships between text and image. This has recently manifested itself as an ongoing, in-depth study of visual poetry.  Described as “the creation of verbal artefacts which exploit the possibilities, not only of sound, sense and rhythm—the traditional fields of poetry— but also of space,”<sup>1</sup> visual poetry is unique in that textual and visual rhetoric interact to create meaning. Ever since I learned of Guillaume Apollinaire’s iconic <span id="italic">il Pleut</span> —  a poem in which the stanzas are arranged in the form of falling rain, echoing the piece's subject — I have been infatuated with the subject. After all, it is the perfect combination of my two favourite activities: writing and graphic design.</p>     
       </div>
     </div>
     </div>
@@ -90,7 +93,7 @@
           <h1>Understanding Visual Poetry: Literature Review</h1>
       </div>
       <div class="six columns offset-by-two">
-          <p>I began this project with my third favourite activity: research. In the process of pouring over countless journal articles, I learned about three types of visual poetry. The first form is the Calligram, in which a poem is designed to create a literal image discussed in the text, as is the case in Apollinaire’s work. Next, I studied figurative poetry, in particular the work of E. E. Cummings. This form uses space and layout in a more abstract way: “The deviation from the horizontal or vertical line is an expression of reified kinesis. It contains tension and release, movement, change of direction, pausing and other kinetic experiences —all of which are internalized by the reader as his eye moves along the path of the poem's letters.”<sup>2</sup> Finally, in concrete poetry, layout and space act as an integral part of the work: if the poems were printed conventionally, they would lose their meaning.</p> 
+          <p>I began this project with my third favourite activity: research. In the process of pouring over countless journal articles, I learned about three types of visual poetry. The first form is the Calligram, in which a poem is designed to create a literal image discussed in the text, as is the case in Apollinaire’s work. Next, I studied figurative poetry, in particular, the work of E. E. Cummings. This form uses space and layout in a more abstract way: “The deviation from the horizontal or vertical line is an expression of reified kinesis. It contains tension and release, movement, change of direction, pausing and other kinetic experiences —all of which are internalized by the reader as his eye moves along the path of the poem's letters.”<sup>2</sup> Finally, in concrete poetry, layout and space act as an integral part of the work: if the poems were printed conventionally, they would lose their meaning.</p> 
       </div>
     </div>
         
@@ -318,9 +321,10 @@
         </div>
         <div class="four columns offset-by-four">
             <ul class="footer" style="margin-top: 5%; margin-left:-11%;">
-                <a id="italic" href="../poetry.html">Studies in Visual Poetry</a>
-                <br><a id="italic" href="../contra.html">Contra Magazine</a>
-                <br><a id="italic" href="../egd.html">Digital Bulletin Board System</a>
+                <a class="sliding-u-l-r-l" id="italic" href="../studies/poetry.html">Studies in Visual Poetry</a>
+                <br><a class="sliding-u-l-r-l" id="italic" href="../studies/contra.html">Contra Magazine</a>
+                <br><a class="sliding-u-l-r-l" id="italic" href="../studies/egd.html">Digital Bulletin Board System</a>
+                <br><a class="sliding-u-l-r-l" id="italic" href="../studies/type.html">Typographic Experiments</a>
             </ul>
         </div>
 </div>
