--- a/studies/type.html
+++ b/studies/type.html
@@ -198,10 +198,10 @@
         </div>
         <div class="four columns offset-by-four">
             <ul class="footer" style="margin-top: 5%; margin-left:-11%;">
-                <a id="italic" href="../studies/poetry.html">Studies in Visual Poetry</a>
-                <br><a id="italic" href="../studies/contra.html">Contra Magazine</a>
-                <br><a id="italic" href="../studies/egd.html">Digital Bulletin Board System</a>
-                <br><a id="italic" href="../studies/type.html">Typographic Experiments</a>
+                <a a class="sliding-u-l-r-l" id="italic" href="../studies/poetry.html">Studies in Visual Poetry</a>
+                <br><a a class="sliding-u-l-r-l" id="italic" href="../studies/contra.html">Contra Magazine</a>
+                <br><a a class="sliding-u-l-r-l" id="italic" href="../studies/egd.html">Digital Bulletin Board System</a>
+                <br><a a class="sliding-u-l-r-l" id="italic" href="../studies/type.html">Typographic Experiments</a>
             </ul>
         </div>
 </div>
