--- a/studies/contra.html
+++ b/studies/contra.html
@@ -55,6 +55,9 @@
             <li>
               <a class="sliding-u-l-r-l" href="../studies/egd.html">digital bulletin board system</a>
             </li>
+              <li>
+              <a class="sliding-u-l-r-l" href="../studies/type.html">typographic experiments</a>
+            </li>
           </ul>
         </li>
         <li>
@@ -259,9 +262,10 @@
         </div>
         <div class="four columns offset-by-four">
             <ul class="footer" style="margin-top: 5%; margin-left:-11%;">
-                <a id="italic" href="../poetry.html">Studies in Visual Poetry</a>
-                <br><a id="italic" href="../contra.html">Contra Magazine</a>
-                <br><a id="italic" href="../egd.html">Digital Bulletin Board System</a>
+                <a a class="sliding-u-l-r-l" id="italic" href="../studies/poetry.html">Studies in Visual Poetry</a>
+                <br><a a class="sliding-u-l-r-l" id="italic" href="../studies/contra.html">Contra Magazine</a>
+                <br><a a class="sliding-u-l-r-l" id="italic" href="../studies/egd.html">Digital Bulletin Board System</a>
+                <br><a a class="sliding-u-l-r-l" id="italic" href="../studies/type.html">Typographic Experiments</a>
             </ul>
         </div>
 </div>
