--- a/studies/about.html
+++ b/studies/about.html
@@ -98,7 +98,7 @@
         </div>
         <div class="four columns offset-by-four" style="margin-bottom: 5%;">
             <ul>
-                <a a class="sliding-u-l-r-l" id="italic" href="../studies/thesis.html">Studies in Visual Poetry</a>
+                <a a class="sliding-u-l-r-l" id="italic" href="../studies/poetry.html">Studies in Visual Poetry</a>
                 <br><a a class="sliding-u-l-r-l" id="italic" href="../studies/contra.html">Contra Magazine</a>
                 <br><a a class="sliding-u-l-r-l" id="italic" href="../studies/egd.html">Digital Bulletin Board System</a>
                 <br><a a class="sliding-u-l-r-l" id="italic" href="../studies/type.html">Typographic Experiments</a>
