--- a/studies/about.html
+++ b/studies/about.html
@@ -91,7 +91,7 @@
              <p style="margin-top:-0.5%;"><span id="italic">Applied Arts Single Entry Winner,</span> 2015
              <br><span id="italic">Swash & Serif 2 Exhibitor,</span> October 2015
              </p>
-             <h5>let's chat! —</h5><p style="margin-bottom: 20%;">Have thoughts, feelings, emotions or general musings on life? I live for that. Drop me a line at <span id="italic">info@laurenholden.ca</span></p>
+             <h5>let's chat! —</h5><p style="margin-bottom: 20%; margin-top:-0.5%;">Have thoughts, feelings, emotions or general musings on life? I live for that. Drop me a line at <span id="italic">info@laurenholden.ca</span></p>
       </div>
     </div>
 
