--- a/studies/about.html
+++ b/studies/about.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Lauren Holden - Studies in Visual Poetry</title>
+  <title>Lauren Holden - About</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="keywords" content="lauren holden, design, poetry, publication, writer, toronto, visual poetry, calligrams, figurative poetry, rhetorical, rhetoric, graphic design, metaphor, E.E. Cummings, concrete poetry, concretism, Apollinaire, Guillaume, York University, Sheridan College, YSDN, designer, Toronto">
