--- a/studies/about.html
+++ b/studies/about.html
@@ -89,7 +89,7 @@
         <h4>I am an interdisciplinary creative with a passion for words. Drawing on training from the York University/Sheridan College Joint Program in Design, as well as a lifelong passion for all things literary, my work largely operates at the intersection of typography, graphic design and creative and critical writing. I emphasize research and exploration in everything I do, thrive on variety, and am always eager to learn new things.</h4>
 
           <h5 style="margin-top: 9%">currently reading —</h5>
-             <p style="margin-top:-0.5%;"><span id="italic">Americanah,</span> by Chimamannda Ngozi Adichie
+             <p style="margin-top:-0.5%;"><span id="italic">Americanah,</span> by Chimamanda Ngozi Adichie
              <br><span id="italic">In Other Words,</span> by Jhumpa Lahiri
              <br><a class="about-link" target="_blank" href="http://www.onmetatron.org/portfolio_page/an-indoor-kind-of-girl-frankie-barnet/">An Indoor Kind of Girl,</a> by Frankie Barnet
              <br><span id="italic">The Truth About Stories,</span> by Thomas King
