--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function getRandomImage(imgAr, path) {
     
     <div class="container">
     <div class="row">
-        <h4 class="header five columns">lauren holden is a writer and designer interested in the intersection of visual and verbal rhetoric</h4>
+        <h4 class="header five columns">lauren holden is a writer and designer interested in the intersection of visual and verbal authorship</h4>
         <div class="six columns level100 floating" style="top:20px; left: 450px; animation-duration: 14s;">
             <script type="text/javascript">getRandomImage(random_images_array, 'images/')</script>
         </div>
