--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ function getRandomImage(imgAr, path) {
         <li class="sliding-u-l-r-l">
           <a href="#!">case studies</a>
           <ul class="nav-dropdown">
+             <li>
+              <a class="sliding-u-l-r-l" href="studies/cottage.html">a pixel can't take up space</a>
+            </li>
             <li>
               <a class="sliding-u-l-r-l" href="studies/poetry.html">studies in visual poetry</a>
             </li>
@@ -77,12 +80,12 @@ function getRandomImage(imgAr, path) {
               <a class="sliding-u-l-r-l" href="studies/contra.html">contra magazine</a>
             </li>
             <li>
-              <a class="sliding-u-l-r-l" href="studies/egd.html">digital bulletin board system</a>
-            </li>
-            <li>
               <a class="sliding-u-l-r-l" href="studies/type.html">typographic experiments</a>
             </li>
           </ul>
+        </li>
+        <li>
+          <a class="sliding-u-l-r-l" href="studies/gallery.html">just visuals</a>
         </li>
         <li>
           <a class="sliding-u-l-r-l" href="studies/about.html">about</a>
@@ -95,7 +98,7 @@ function getRandomImage(imgAr, path) {
     
     <div class="container">
     <div class="row">
-        <h4 class="header five columns">lauren holden is a writer and designer interested in the intersection of visual and verbal authorship</h4>
+        <h4 class="header five columns bop">lauren holden is a writer and designer interested in the intersection of visual and verbal authorship</h4>
         <div class="six columns level100 floating" style="top:20px; left: 450px; animation-duration: 14s;">
             <script type="text/javascript">getRandomImage(random_images_array, 'images/')</script>
         </div>
