--- a/studies/egd.html
+++ b/studies/egd.html
@@ -52,6 +52,9 @@
           <a href="#!">case studies</a>
           <ul class="nav-dropdown">
             <li>
+              <a class="sliding-u-l-r-l" href="../studies/thingsithought.html">a pixel can't take up space</a>
+            </li>
+            <li>
               <a class="sliding-u-l-r-l" href="../studies/poetry.html">studies in visual poetry</a>
             </li>
              <li>
