--- a/studies/thingsithought.html
+++ b/studies/thingsithought.html
@@ -16,7 +16,7 @@
   <title>Lauren Holden - thingsithought.today</title>
   <meta name="description" content="">
   <meta name="author" content="">
-  <meta name="keywords" content="lauren holden, design, poetry, publication, writer, toronto, visual poetry, calligrams, figurative poetry, rhetorical, rhetoric, graphic design, metaphor, E.E. Cummings, concrete poetry, concretism, Apollinaire, Guillaume, York University, Sheridan College, YSDN, designer, Toronto">
+  <meta name="keywords" content="lauren holden, design, poetry, publication, writer, toronto, visual poetry, calligrams, figurative poetry, rhetorical, rhetoric, graphic design, metaphor, E.E. Cummings, concrete poetry, concretism, Apollinaire, Guillaume, York University, Sheridan College, YSDN, designer, Toronto, lauren holden, design, designer, Toronto, Canada, graphic design, poetry, creative writing, writing, content strategy, typography, editorial, publication, art direction, creative direction, editing, visual communication, communication design, YSDN, York University, Sheridan College, web design, interaction design, experimental, experimental web design, environmental design, experiential design">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -55,6 +55,9 @@
           <a href="#!">case studies</a>
           <ul class="nav-dropdown">
             <li>
+              <a class="sliding-u-l-r-l" href="../studies/cottage.html">a pixel can't take up space</a>
+            </li>
+            <li>
               <a class="sliding-u-l-r-l" href="../studies/poetry.html">studies in visual poetry</a>
             </li>
             <li>
@@ -64,12 +67,12 @@
               <a class="sliding-u-l-r-l" href="../studies/contra.html">contra magazine</a>
             </li>
             <li>
-              <a class="sliding-u-l-r-l" href="../studies/egd.html">digital bulletin board system</a>
-            </li>
-            <li>
               <a class="sliding-u-l-r-l" href="../studies/type.html">typographic experiments </a>
             </li>
           </ul>
+        </li>
+        <li>
+          <a class="sliding-u-l-r-l" href="../studies/gallery.html">just visuals</a>
         </li>
         <li>
           <a class="sliding-u-l-r-l" href="../studies/about.html">about</a>
@@ -153,8 +156,8 @@
   </div>
 
       <div class="row">
-        <div class="seven columns offset-by-three">
-          <h2>Winner of the Forge Award for Typographic Design (RGD Student Awards) and an Applied Arts Magazine Award for Website Design
+        <div class="eight columns offset-by-three">
+          <h2>Winner of an RGD Social Good Award for a Designer-Initiated Project, the RGD Forge Award for Typographic Design, and an Applied Arts Magazine Award for Website Design
           </h2>
         </div>
     </div>
