--- a/studies/contra.html
+++ b/studies/contra.html
@@ -16,7 +16,7 @@
   <title>Lauren Holden - Contra</title>
   <meta name="description" content="">
   <meta name="author" content="">
-  <meta name="keywords" content="lauren holden, design, dadaism, publication, writer, toronto, magazine, editorial, editorial design, contra, art, activism, resistance, community art, intersectional feminism">
+  <meta name="keywords" content="lauren holden, design, dadaism, publication, writer, toronto, magazine, editorial, editorial design, contra, art, activism, resistance, community art, intersectional feminism, lauren holden, design, designer, Toronto, Canada, graphic design, poetry, creative writing, writing, content strategy, typography, editorial, publication, art direction, creative direction, editing, visual communication, communication design, YSDN, York University, Sheridan College, web design, interaction design, experimental, experimental web design, environmental design, experiential design">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -55,6 +55,9 @@
           <a href="#!">case studies</a>
           <ul class="nav-dropdown">
             <li>
+              <a class="sliding-u-l-r-l" href="../studies/cottage.html">a pixel can't take up space</a>
+            </li>
+            <li>
               <a class="sliding-u-l-r-l" href="../studies/poetry.html">studies in visual poetry</a>
             </li>
              <li>
@@ -63,17 +66,18 @@
             <li>
               <a class="sliding-u-l-r-l" href="../studies/contra.html">contra magazine</a>
             </li>
-            <li>
-              <a class="sliding-u-l-r-l" href="../studies/egd.html">digital bulletin board system</a>
-            </li>
               <li>
               <a class="sliding-u-l-r-l" href="../studies/type.html">typographic experiments</a>
             </li>
           </ul>
         </li>
         <li>
+          <a class="sliding-u-l-r-l" href="../studies/gallery.html">just visuals</a>
+        </li>
+        <li>
           <a class="sliding-u-l-r-l" href="../studies/about.html">about</a>
         </li>
+         
       </ul>
     </nav>
   </div>
