--- a/studies/cottage.html
+++ b/studies/cottage.html
@@ -149,6 +149,7 @@
       <div class="seven columns offset-by-five" style="margin-top: 0%;">
           <p>During the final festival, I presented the piece by projecting it at a white sheet hung so that it curves away from the wall. I then positioned a bed under the sheet so that visitors would have to lie down beneath the piece in order to view it, ultimately creating a more immersive and novel experience. Visitors then scrolled through the website using the provided mouse, moving forward and backward through the prose and associated images at their own pace. Finally, I played an audio track of my computer reading the Gros Morne National Park Wikipedia Page. In addition to creating more anxiety-inducing stimulation, I felt that the robotic voice and mispronunciations would highlight the foolishness of trying to know a place via the internet.
           </p> 
+          <p><a style="font-family: GTSectra-Bold"target="_blank" href="../hidden/index2.html">View the full project here.</a></p>
       </div>
     </div>
 
