--- a/Hidden/index2.html
+++ b/Hidden/index2.html
@@ -66,10 +66,10 @@
 
 
       <img class="four columns bop" alt="iphone1" src="images/iphone1.jpg" style="position: absolute; top: 6500px; z-index: 20;">
-      <img class="three columns offset-by-six float" alt="weather" src="images/iphone2.jpg" style="position: absolute; top: 6800px; z-index: 0;">
-      <img class="three columns offset-by-nine bop" alt="weather" src="images/iphone3.jpg" style="position: absolute; top: 7500px; z-index: 0;">
-          <img class="three columns offset-by-six float" alt="weather" src="images/iphone4.jpg" style="position: absolute; top: 7700px; z-index: 0;">
-             <img class="four columns float" alt="weather" src="images/iphone5.jpg" style="position: absolute; top: 7800px; z-index: 0;">
+      <img class="three columns offset-by-six float" alt="iphone2" src="images/iphone2.jpg" style="position: absolute; top: 6800px; z-index: 0;">
+      <img class="three columns offset-by-nine bop" alt="iphone3" src="images/iphone3.jpg" style="position: absolute; top: 7500px; z-index: 0;">
+      <img class="three columns offset-by-six float" alt="iphone4" src="images/iphone4.jpg" style="position: absolute; top: 7700px; z-index: 0;">
+      <img class="four columns float" alt="iphone5" src="images/iphone5.jpg" style="position: absolute; top: 7800px; z-index: 0;">
 
 
        <div class="ten columns bop" id="noonecares" style="position: absolute; z-index: 100; top: 9700px;"></div>
