--- a/Hidden/index2.html
+++ b/Hidden/index2.html
@@ -50,7 +50,7 @@
    <div class="container" style="height: 20000px;">  
    <div class="row"> 
 
-      <img class="eight columns" alt="street view" src="images/streetview.gif" style="position: absolute; top: 200px;z-index: 10;">
+      <img class="eight columns" alt="street view" src="images/iphone1.jpg" style="position: absolute; top: 200px;z-index: 10;">
       <img class="six columns offset-by-two bop" alt="weather" src="images/weather.gif" style="position: absolute; top: 550px;z-index: 10;">
       <img class="eight columns offset-by-four" alt="wikipedia" src="images/wikipedia.png" style="position: absolute; top: 1600px;z-index: 20;">
       <img class="seven columns offset-by-two bop" alt="youtube" src="images/youtube.png" style="position: absolute; top: 2000px;z-index: 0;">
