--- a/Hidden/index2.html
+++ b/Hidden/index2.html
@@ -19,7 +19,7 @@
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css"><
+  <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/font/font.css" type="text/css" charset="utf-8">
 
   <!-- Favicon
@@ -36,8 +36,6 @@
    <script src="build/materials/FliesMaterial.js"></script>
 
 
-
-</head>
 <body style="background-color:#8afd0f;">
 
 
@@ -50,7 +48,7 @@
    <div class="container" style="height: 20000px;">  
    <div class="row"> 
 
-      <img class="eight columns" alt="street view" src="images/iphone1.jpg" style="position: absolute; top: 200px;z-index: 10;">
+      <img class="eight columns" alt="street view" src="images/streetview.gif" style="position: absolute; top: 200px;z-index: 10;">
       <img class="six columns offset-by-two bop" alt="weather" src="images/weather.gif" style="position: absolute; top: 550px;z-index: 10;">
       <img class="eight columns offset-by-four" alt="wikipedia" src="images/wikipedia.png" style="position: absolute; top: 1600px;z-index: 20;">
       <img class="seven columns offset-by-two bop" alt="youtube" src="images/youtube.png" style="position: absolute; top: 2000px;z-index: 0;">
