--- a/Hidden/index2.html
+++ b/Hidden/index2.html
@@ -37,7 +37,9 @@
 
 
 <body style="background-color:#8afd0f;">
-
+ <audio autoplay loop>
+      <source src="sound/Gros Morne.m4a" type="audio/mpeg">
+    </audio>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
