--- a/studies/about.html
+++ b/studies/about.html
@@ -94,7 +94,8 @@
 
           <h5 style="margin-top: 7%">currently reading —</h5>
              <p style="margin-top:-0.5%;"><span id="italic">A Room of One's Own,</span> by Virginia Woolf
-             <br><a class="about-link" target="_blank" href="http://www.metatron.press/work/the-end-by-anna/">The End, by Anna</a> by Adam Zachary
+              <br><span id="italic">Medicine River,</span> by Thomas King
+             <br><a class="about-link" target="_blank" href="http://www.metatron.press/work/the-end-by-anna/">The End, by Anna,</a> by Adam Zachary
              <br><span id="italic">Bluets,</span> by Maggie Nelson
              </p>
 
@@ -121,8 +122,10 @@
            
            <h5>experience  —</h5>
             <p style="margin-top:-0.5%;">
-            <a class="about-link" target="_blank" href="https://www.facebook.com/events/1972117729705664/">COTTAGE Digital Arts Incubator, Invited Artist, </a>April 2018
-            <br><a class="about-link" target="_blank" href="https://www.justinnozuka.com/">Designer to Justin Nozuka (musician),</a> 2018-present
+            <a class="about-link" target="_blank" href="http://unscriptedfestival.com/events/workshop-visual-poetry/">Unscripted Digital Arts Festival, Presenter,</a> Sept 2018
+            <br><a class="about-link" target="_blank" href="http://unscriptedfestival.com/events/workshop-visual-poetry/">Liberty Arts Gallery & Shop, Gallery Manager,</a> June 2018-present
+            <br><a class="about-link" target="_blank" href="https://www.facebook.com/events/1972117729705664/">COTTAGE Digital Arts Incubator, Invited Artist, </a>April 2018
+            <br><a class="about-link" target="_blank" href="#">Freelance Graphic Designer,</a> 2018-present
             <br> <a class="about-link" target="_blank" href="http://www.lokidesign.net">LOKI, Design Intern</a> May-June 2017
             <br><a class="about-link" target="_blank" href="http://www.ysdn2017.com">YSDN2017, Co-Director of Experiential Design,</a> 2016-2017
             <br><a class="about-link" target="_blank" href="https://www.27.bienalebrno.org/en/Index">Brno Biennial Attendee, Brno, Czech Republic,</a> 2016
