--- a/studies/about.html
+++ b/studies/about.html
@@ -123,7 +123,7 @@
            <h5>experience  —</h5>
             <p style="margin-top:-0.5%;">
             <a class="about-link" target="_blank" href="http://unscriptedfestival.com/events/workshop-visual-poetry/">Unscripted Digital Arts Festival, Presenter,</a> Sept 2018
-            <br><a class="about-link" target="_blank" href="http://unscriptedfestival.com/events/workshop-visual-poetry/">Liberty Arts Gallery & Shop, Gallery Manager,</a> June 2018-present
+            <br><a class="about-link" target="_blank" href="https://www.facebook.com/LibertyArtsToronto/?ref=aymt_homepage_panel">Liberty Arts Gallery & Shop, Gallery Manager,</a> June 2018-present
             <br><a class="about-link" target="_blank" href="https://www.facebook.com/events/1972117729705664/">COTTAGE Digital Arts Incubator, Invited Artist, </a>April 2018
             <br><a class="about-link" target="_blank" href="#">Freelance Graphic Designer,</a> 2018-present
             <br> <a class="about-link" target="_blank" href="http://www.lokidesign.net">LOKI, Design Intern</a> May-June 2017
