--- a/studies/cottage.html
+++ b/studies/cottage.html
@@ -59,24 +59,27 @@
         <li class="sliding-u-l-r-l">
           <a href="#!">case studies</a>
           <ul class="nav-dropdown">
-              <li>
+            <li>
               <a class="sliding-u-l-r-l" href="../studies/cottage.html">a pixel can't take up space</a>
             </li>
             <li>
               <a class="sliding-u-l-r-l" href="../studies/poetry.html">studies in visual poetry</a>
             </li>
-            <li>
+             <li>
               <a class="sliding-u-l-r-l" href="../studies/thingsithought.html">thingsithought.today</a>
+            </li>
+            <li>
+              <a class="sliding-u-l-r-l" href="../studies/client-work.html">client work</a>
             </li>
             <li>
               <a class="sliding-u-l-r-l" href="../studies/contra.html">contra magazine</a>
             </li>
-            <li>
-              <a class="sliding-u-l-r-l" href="../studies/type.html">typographic experiments </a>
+              <li>
+              <a class="sliding-u-l-r-l" href="../studies/type.html">typographic experiments</a>
             </li>
           </ul>
         </li>
-         <li>
+        <li>
           <a class="sliding-u-l-r-l" href="../studies/gallery.html">just visuals</a>
         </li>
         <li>
@@ -127,7 +130,7 @@
 </div>
  <div class="row">
         <div class="eight columns offset-by-two text-center">
-          <h2>The digital landscape is so vast that one can fool oneself into thinking they know a place, without ever actually having been there
+          <h2>The digital landscape is so vast that one can fool oneself into thinking that they know a place, without ever actually having been there
           </h2>
         </div>
     </div>
