--- a/studies/gallery.html
+++ b/studies/gallery.html
@@ -60,11 +60,14 @@
             <li>
               <a class="sliding-u-l-r-l" href="../studies/cottage.html">a pixel can't take up space</a>
             </li>
-             <li>
+            <li>
               <a class="sliding-u-l-r-l" href="../studies/poetry.html">studies in visual poetry</a>
             </li>
              <li>
               <a class="sliding-u-l-r-l" href="../studies/thingsithought.html">thingsithought.today</a>
+            </li>
+            <li>
+              <a class="sliding-u-l-r-l" href="../studies/client-work.html">client work</a>
             </li>
             <li>
               <a class="sliding-u-l-r-l" href="../studies/contra.html">contra magazine</a>
@@ -74,7 +77,7 @@
             </li>
           </ul>
         </li>
-          <li>
+        <li>
           <a class="sliding-u-l-r-l" href="../studies/gallery.html">just visuals</a>
         </li>
         <li>
@@ -164,7 +167,7 @@
         </div>
       </a>
 
-          <a class="five columns offset-by-seven above bop" href="http://ysdn2017.com/" target="_blank" style="position: absolute; top: 6500px">
+          <a class="five columns offset-by-seven above bop" target="_blank" style="position: absolute; top: 6500px">
         <div class="product-image">
           <img src="../gallery/grad.jpg" alt="ysdn2017 grad show" />
         </div>
@@ -186,7 +189,7 @@
 
     <img class="six columns galleryimg below floating" src="../gallery/stfu.jpg" alt="stfu" style="top: 7600px;"/>
 
-     <a class="seven columns offset-by-four below bop" href="http://swashandserif.ca/2015/" target="_blank" style="position: absolute; top: 8000px">
+     <a class="seven columns offset-by-four below bop" href="http://swashandserif.ca/two/" target="_blank" style="position: absolute; top: 8000px">
         <div class="product-image">
           <img src="../gallery/beauty.jpg" alt="Beauty" />
         </div>
@@ -200,7 +203,7 @@
     <img class="five columns offset-by-six galleryimg above bop" src="../gallery/family3.png" alt="family" style="top: 9000px;"/>
 
 
-     <a class="eight columns offset-by-two below bop" href="http://swashandserif.ca/2015/" target="_blank" style="position: absolute; top: 9300px">
+     <a class="eight columns offset-by-two below bop" href="http://swashandserif.ca/two/" target="_blank" style="position: absolute; top: 9300px">
         <div class="product-image">
           <img src="../gallery/proposal.jpg" alt="Beauty" />
         </div>
@@ -217,7 +220,7 @@
     <img class="two columns galleryimg above floating" src="../gallery/pose5.gif" alt="gymnast" style="top: 11400px;"/>
 
 
-    <a class="six columns offset-by-three below bop" href="http://swashandserif.ca/2015/" target="_blank" style="position: absolute; top: 11000px">
+    <a class="six columns offset-by-three below bop" href="http://swashandserif.ca/two/" target="_blank" style="position: absolute; top: 11000px">
         <div class="product-image">
           <img src="../gallery/urhere.jpg" alt="Beauty" />
         </div>
