--- a/studies/poetry.html
+++ b/studies/poetry.html
@@ -64,14 +64,17 @@
               <a class="sliding-u-l-r-l" href="../studies/thingsithought.html">thingsithought.today</a>
             </li>
             <li>
-              <a class="sliding-u-l-r-l" href="../studies/contra.html">contra magazine</a>
+              <a class="sliding-u-l-r-l" href="../studies/client-work.html">client work</a>
             </li>
             <li>
+              <a class="sliding-u-l-r-l" href="../studies/contra.html">contra magazine</a>
+            </li>
+              <li>
               <a class="sliding-u-l-r-l" href="../studies/type.html">typographic experiments</a>
             </li>
           </ul>
         </li>
-         <li>
+        <li>
           <a class="sliding-u-l-r-l" href="../studies/gallery.html">just visuals</a>
         </li>
         <li>
