--- a/studies/thingsithought.html
+++ b/studies/thingsithought.html
@@ -60,14 +60,17 @@
             <li>
               <a class="sliding-u-l-r-l" href="../studies/poetry.html">studies in visual poetry</a>
             </li>
-            <li>
+             <li>
               <a class="sliding-u-l-r-l" href="../studies/thingsithought.html">thingsithought.today</a>
+            </li>
+            <li>
+              <a class="sliding-u-l-r-l" href="../studies/client-work.html">client work</a>
             </li>
             <li>
               <a class="sliding-u-l-r-l" href="../studies/contra.html">contra magazine</a>
             </li>
-            <li>
-              <a class="sliding-u-l-r-l" href="../studies/type.html">typographic experiments </a>
+              <li>
+              <a class="sliding-u-l-r-l" href="../studies/type.html">typographic experiments</a>
             </li>
           </ul>
         </li>
