--- a/studies/type.html
+++ b/studies/type.html
@@ -64,6 +64,9 @@
               <a class="sliding-u-l-r-l" href="../studies/thingsithought.html">thingsithought.today</a>
             </li>
             <li>
+              <a class="sliding-u-l-r-l" href="../studies/client-work.html">client work</a>
+            </li>
+            <li>
               <a class="sliding-u-l-r-l" href="../studies/contra.html">contra magazine</a>
             </li>
               <li>
