--- a/studies/contra.html
+++ b/studies/contra.html
@@ -64,6 +64,9 @@
               <a class="sliding-u-l-r-l" href="../studies/thingsithought.html">thingsithought.today</a>
             </li>
             <li>
+              <a class="sliding-u-l-r-l" href="../studies/client-work.html">client work</a>
+            </li>
+            <li>
               <a class="sliding-u-l-r-l" href="../studies/contra.html">contra magazine</a>
             </li>
               <li>
@@ -77,7 +80,6 @@
         <li>
           <a class="sliding-u-l-r-l" href="../studies/about.html">about</a>
         </li>
-         
       </ul>
     </nav>
   </div>
