--- a/studies/client-work.html
+++ b/studies/client-work.html
@@ -124,8 +124,8 @@
           </div>
 
         <div class="row">
-            <div class="eight columns offset-by-two">
-                <h2 style="text-align: center">Nozuka's graphics emphasize his passion for live performance, dedication to his fans, and—like his music—are inspired by a deep connection to nature
+            <div class="eight columns offset-by-two" style="margin-top: -6%;">
+                <h2 style="text-align: center;">Nozuka's graphics emphasize his passion for live performance, dedication to his fans, and—like his music—are inspired by a deep connection to nature
                 </h2>
               </div>
           </div>
