--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@ function getRandomImage(imgAr, path) {
               <a class="sliding-u-l-r-l" href="studies/thingsithought.html">thingsithought.today</a>
             </li>
             <li>
+              <a class="sliding-u-l-r-l" href="studies/client-work.html">client work</a>
+            </li>
+            <li>
               <a class="sliding-u-l-r-l" href="studies/contra.html">contra magazine</a>
             </li>
             <li>
